ship moving + save button

--- a/game.html
+++ b/game.html
@@ -40,6 +40,7 @@
                     <div class="shipsGarageBx"></div>
                 </div>
             </div>
+            <button id="saveShipPosition">Save</button>
             <div id="buildArea">
                 <div id="buildAreaRow">
                     <div class="buildSquareRow"></div>
