--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <div>
                 <div class="buttonBx">
                     <div class="spinBx"></div>
-                    <button id="playGameMenu"><a href="./game.html">Play!</a></button>
+                    <a href="./game.html" id="playGameMenu">Play!</a>
                 </div>
                 <div class="buttonBx">
                     <div class="spinBx"></div>
-                    <button id="startTutorial"><a href="#">Tutorial</a></button>
+                    <a href="#" id="startTutorial">Tutorial</a>
                 </div>
             </div>
         </section>
