moving ship + saving position

--- a/game.html
+++ b/game.html
@@ -16,6 +16,8 @@
 
         <!-- building ship -->
         <section id="buildShip">
+            <h1>Place your ships</h1>
+            <div id="buildGarageOverLap"></div>
             <div id="buildGarage">
                 <div class="shipsInGarage">
                     <div class="shipsGarageBx"></div>
@@ -40,7 +42,9 @@
                     <div class="shipsGarageBx"></div>
                 </div>
             </div>
-            <button id="saveShipPosition">Save</button>
+            <div id="saveButtonOverLap"></div>
+            <button id="saveShipButton">Save</button>
+            <button id="buildShipContinue">Continue</button>
             <div id="buildArea">
                 <div id="buildAreaRow">
                     <div class="buildSquareRow"></div>
