--- a/game.html
+++ b/game.html
@@ -24,6 +24,7 @@
                     <div class="shipsGarageBx"></div>
                     <div class="shipsGarageBx"></div>
                     <div class="shipsGarageBx"></div>
+                    <img src="./res/img/cruiser.png" alt="" class="shipInGarageImg" draggable="false">
                 </div>
                 <div class="shipsInGarage">
                     <div class="shipsGarageBx"></div>
@@ -43,6 +44,7 @@
                 </div>
             </div>
             <div id="saveButtonOverLap"></div>
+            <button id="rotateShipButton">Rotate</button>
             <button id="saveShipButton">Save</button>
             <button id="buildShipContinue">Continue</button>
             <div id="buildArea">
