placing ship finished

--- a/game.html
+++ b/game.html
@@ -24,7 +24,9 @@
                     <div class="shipsGarageBx"></div>
                     <div class="shipsGarageBx"></div>
                     <div class="shipsGarageBx"></div>
+                    <div class="shipInGarageBxImg">
                     <img src="./res/img/cruiser.png" alt="" class="shipInGarageImg" draggable="false">
+                    </div>
                 </div>
                 <div class="shipsInGarage">
                     <div class="shipsGarageBx"></div>
@@ -44,6 +46,7 @@
                 </div>
             </div>
             <div id="saveButtonOverLap"></div>
+            <div id="rotateButtonOverLap"></div>
             <button id="rotateShipButton">Rotate</button>
             <button id="saveShipButton">Save</button>
             <button id="buildShipContinue">Continue</button>
@@ -75,106 +78,6 @@
                 </div>
                 
                 <div id="buildBoard">
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
-                    <div class="buildSquare"></div>
                 </div>
             </div>
             
