new arrow moving + my ships in game html,css

--- a/game.html
+++ b/game.html
@@ -45,6 +45,14 @@
                     <div class="shipsGarageBx"></div>
                 </div>
             </div>
+            <div id="arrowBx">
+                <img src="./res/img/arrow.png" alt="" class="arrow" id="arrowUp" draggable="false">
+                <div>
+                <img src="./res/img/arrow.png" alt="" class="arrow" id="arrowLeft" draggable="false">
+                <img src="./res/img/arrow.png" alt="" class="arrow" id="arrowRight" draggable="false">
+                </div>
+                <img src="./res/img/arrow.png" alt="" class="arrow" id="arrowDown" draggable="false">
+            </div>
             <div id="saveButtonOverLap"></div>
             <div id="rotateButtonOverLap"></div>
             <button id="rotateShipButton">Rotate</button>
@@ -85,209 +93,86 @@
 
         <!-- game -->
         <main id="game">
+            <div class="myShips">
+                <div class="myShipsBx"></div>
+                <div class="myShipsBx"></div>
+                <div class="myShipsBx"></div>
+                <div class="myShipsBx"></div>
+                <div class="myShipsBxImg">
+                <img src="./res/img/cruiser.png" alt="" class="myShipsImg" draggable="false">
+                </div>
+            </div>
+            <div class="myShips">
+                <div class="myShipsBx"></div>
+                <div class="myShipsBx"></div>
+                <div class="myShipsBx"></div>
+            </div>
+            <div class="myShips">
+                <div class="myShipsBx"></div>
+                <div class="myShipsBx"></div>
+            </div>
+            <div class="myShips">
+                <div class="myShipsBx"></div>
+                <div class="myShipsBx"></div>
+            </div>
+            <div class="myShips">
+                <div class="myShipsBx"></div>
+            </div>
             <div id="myArea">
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
-                <div class="mySquare"></div>
+                <div id="myAreaRow">
+                    <div class="mySquareRow"></div>
+                    <div class="mySquareRow">A</div>
+                    <div class="mySquareRow">B</div>
+                    <div class="mySquareRow">C</div>
+                    <div class="mySquareRow">D</div>
+                    <div class="mySquareRow">E</div>
+                    <div class="mySquareRow">F</div>
+                    <div class="mySquareRow">G</div>
+                    <div class="mySquareRow">H</div>
+                    <div class="mySquareRow">I</div>
+                    <div class="mySquareRow">J</div>
+                </div>
+                <div id="myAreaColumn">
+                    <div class="mySquareColumn">1</div>
+                    <div class="mySquareColumn">2</div>
+                    <div class="mySquareColumn">3</div>
+                    <div class="mySquareColumn">4</div>
+                    <div class="mySquareColumn">5</div>
+                    <div class="mySquareColumn">6</div>
+                    <div class="mySquareColumn">7</div>
+                    <div class="mySquareColumn">8</div>
+                    <div class="mySquareColumn">9</div>
+                    <div class="mySquareColumn">10</div>
+                </div>
+                <div id="myBoard"></div>
             </div>
             <div id="enemyArea">
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
-                <div class="enemySquare"></div>
+                <div id="enemyAreaRow">
+                    <div class="enemySquareRow"></div>
+                    <div class="enemySquareRow">A</div>
+                    <div class="enemySquareRow">B</div>
+                    <div class="enemySquareRow">C</div>
+                    <div class="enemySquareRow">D</div>
+                    <div class="enemySquareRow">E</div>
+                    <div class="enemySquareRow">F</div>
+                    <div class="enemySquareRow">G</div>
+                    <div class="enemySquareRow">H</div>
+                    <div class="enemySquareRow">I</div>
+                    <div class="enemySquareRow">J</div>
+                </div>
+                <div id="enemyAreaColumn">
+                    <div class="enemySquareColumn">1</div>
+                    <div class="enemySquareColumn">2</div>
+                    <div class="enemySquareColumn">3</div>
+                    <div class="enemySquareColumn">4</div>
+                    <div class="enemySquareColumn">5</div>
+                    <div class="enemySquareColumn">6</div>
+                    <div class="enemySquareColumn">7</div>
+                    <div class="enemySquareColumn">8</div>
+                    <div class="enemySquareColumn">9</div>
+                    <div class="enemySquareColumn">10</div>
+                </div>
+                <div id="enemyBoard"></div>
             </div>
         </main>
 
