enemy ships placing

--- a/game.html
+++ b/game.html
@@ -169,6 +169,31 @@
                 </div>
                 <div id="myBoard"></div>
             </div>
+            <div class="enemyShips">
+                <div class="enemyShipsBx"></div>
+                <div class="enemyShipsBx"></div>
+                <div class="enemyShipsBx"></div>
+                <div class="enemyShipsBx"></div>
+                <div class="enemyShipsBxImg">
+                <img src="./res/img/cruiser.png" alt="" class="myShipsImg" draggable="false">
+                </div>
+            </div>
+            <div class="enemyShips">
+                <div class="enemyShipsBx"></div>
+                <div class="enemyShipsBx"></div>
+                <div class="enemyShipsBx"></div>
+            </div>
+            <div class="enemyShips">
+                <div class="enemyShipsBx"></div>
+                <div class="enemyShipsBx"></div>
+            </div>
+            <div class="enemyShips">
+                <div class="enemyShipsBx"></div>
+                <div class="enemyShipsBx"></div>
+            </div>
+            <div class="enemyShips">
+                <div class="enemyShipsBx"></div>
+            </div>
             <div id="enemyArea">
                 <div id="enemyAreaRow">
                     <div class="enemySquareRow"></div>
