new ship images

--- a/game.html
+++ b/game.html
@@ -175,7 +175,7 @@
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBxImg">
-                <img src="./res/img/cruiser.png" alt="" class="myShipsImg" draggable="false">
+                <img src="./res/img/05.png" alt="" class="enemyShipsImg" draggable="false">
                 </div>
             </div>
             <div class="enemyShips">
