new images + new rotation

--- a/game.html
+++ b/game.html
@@ -33,24 +33,38 @@
                     <div class="shipsGarageBx"></div>
                     <div class="shipsGarageBx"></div>
                     <div class="shipInGarageBxImg">
-                    <img src="./res/img/cruiser.png" alt="" class="shipInGarageImg" draggable="false">
+                    <img src="./res/img/ship0.png" alt="" class="shipInGarageImg" draggable="false">
                     </div>
                 </div>
                 <div class="shipsInGarage">
                     <div class="shipsGarageBx"></div>
                     <div class="shipsGarageBx"></div>
                     <div class="shipsGarageBx"></div>
+                    <div class="shipInGarageBxImg">
+                        <img src="./res/img/ship1.png" alt="" class="shipInGarageImg" draggable="false">
+                        </div>
                 </div>
                 <div class="shipsInGarage">
                     <div class="shipsGarageBx"></div>
                     <div class="shipsGarageBx"></div>
+                    <div class="shipsGarageBx"></div>
+                    <div class="shipInGarageBxImg">
+                        <img src="./res/img/ship2.png" alt="" class="shipInGarageImg" draggable="false">
+                        </div>
                 </div>
                 <div class="shipsInGarage">
                     <div class="shipsGarageBx"></div>
                     <div class="shipsGarageBx"></div>
+                    <div class="shipInGarageBxImg">
+                        <img src="./res/img/ship3.png" alt="" class="shipInGarageImg" draggable="false">
+                        </div>
                 </div>
                 <div class="shipsInGarage">
                     <div class="shipsGarageBx"></div>
+                    <div class="shipsGarageBx"></div>
+                    <div class="shipInGarageBxImg">
+                        <img src="./res/img/ship4.png" alt="" class="shipInGarageImg" draggable="false">
+                        </div>
                 </div>
             </div>
             <div id="arrowBx">
@@ -107,24 +121,38 @@
                 <div class="myShipsBx"></div>
                 <div class="myShipsBx"></div>
                 <div class="myShipsBxImg">
-                <img src="./res/img/cruiser.png" alt="" class="myShipsImg" draggable="false">
+                <img src="./res/img/ship0.png" alt="" class="myShipsImg" draggable="false">
                 </div>
             </div>
             <div class="myShips">
                 <div class="myShipsBx"></div>
                 <div class="myShipsBx"></div>
                 <div class="myShipsBx"></div>
+                <div class="myShipsBxImg">
+                    <img src="./res/img/ship1.png" alt="" class="myShipsImg" draggable="false">
+                    </div>
             </div>
             <div class="myShips">
                 <div class="myShipsBx"></div>
                 <div class="myShipsBx"></div>
+                <div class="myShipsBx"></div>
+                <div class="myShipsBxImg">
+                    <img src="./res/img/ship2.png" alt="" class="myShipsImg" draggable="false">
+                    </div>
             </div>
             <div class="myShips">
                 <div class="myShipsBx"></div>
                 <div class="myShipsBx"></div>
+                <div class="myShipsBxImg">
+                    <img src="./res/img/ship3.png" alt="" class="myShipsImg" draggable="false">
+                    </div>
             </div>
             <div class="myShips">
                 <div class="myShipsBx"></div>
+                <div class="myShipsBx"></div>
+                <div class="myShipsBxImg">
+                    <img src="./res/img/ship4.png" alt="" class="myShipsImg" draggable="false">
+                    </div>
             </div>
             <div id="playersTurn">
                 <div id="myIcon">
@@ -175,24 +203,38 @@
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBxImg">
-                <img src="./res/img/05.png" alt="" class="enemyShipsImg" draggable="false">
+                <img src="./res/img/ship0.png" alt="" class="enemyShipsImg" draggable="false">
                 </div>
             </div>
             <div class="enemyShips">
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBx"></div>
+                <div class="enemyShipsBxImg">
+                    <img src="./res/img/ship1.png" alt="" class="enemyShipsImg" draggable="false">
+                    </div>
             </div>
             <div class="enemyShips">
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBx"></div>
+                <div class="enemyShipsBx"></div>
+                <div class="enemyShipsBxImg">
+                    <img src="./res/img/ship2.png" alt="" class="enemyShipsImg" draggable="false">
+                    </div>
             </div>
             <div class="enemyShips">
                 <div class="enemyShipsBx"></div>
                 <div class="enemyShipsBx"></div>
+                <div class="enemyShipsBxImg">
+                    <img src="./res/img/ship3.png" alt="" class="enemyShipsImg" draggable="false">
+                    </div>
             </div>
             <div class="enemyShips">
                 <div class="enemyShipsBx"></div>
+                <div class="enemyShipsBx"></div>
+                <div class="enemyShipsBxImg">
+                    <img src="./res/img/ship4.png" alt="" class="enemyShipsImg" draggable="false">
+                    </div>
             </div>
             <div id="enemyArea">
                 <div id="enemyAreaRow">
